2014-12-31  PHO  <pho@cielonegro.org>

	* tests/Base64.hs: Rename to Test/OpenSSL/EVP/Base64.hs and make
	it a cabal test-case.

	* HsOpenSSL.cabal (Install-Includes): Removed. HsOpenSSL.h needs
	not be installed.

	* HsOpenSSL.cabal (Extensions): Removed. Use {-# LANGUAGE #-}
	pragma instead.

	* OpenSSL/EVP/Internal.hsc (VaguePKey, PKey): Turn documentation
	comments into Haddock ones.

	* OpenSSL/EVP/PKey.hsc (module): Do not re-export PKey. It was
	only accidentally re-exported.

	* HsOpenSSL.cabal (Build-Depends): Narrow version ranges that were
	unnecessarily wide.

	* HsOpenSSL.cabal (Build-Depends): ghc-prim is only required when
	fast-bignum is enabled and the compiler is ghc < 6.11.

	* HsOpenSSL.cabal (Build-Depends) [fast-bignum]: Declare that
	integer-gmp >= 1 is not supported yet.  Reported by Herbert
	Valerio Riedel (#36).

2014-12-23  PHO  <pho@cielonegro.org>

	* OpenSSL/ASN1.hsc (peekASN1Time): Support time-1.5,
	Patch by Herbert Valerio Riedel (#35).

	* OpenSSL/Session.hsc (context, connection'): Replace
	addMVarFinalizer with mkWeakMVar to suppress deprecation warnings,
	Patch by Ryan Desfosses (#33).

	* OpenSSL/Session.hsc (tryShutdown): "shutdown Bidirectional"
	always resulted in an exception "thread blocked indefinitely in an
	MVar operation" because of the way we were using withMVar in
	OpenSSL.Session.tryShutdown.  Reported by Andreas Voellmy (#32).

	* OpenSSL/Session.hsc (contextAddOption, contextRemoveOption)
	(addOption, removeOption, SSLOption): New functions and a data
	type to disable SSLv3 vulnerable to the POODLE attack.
	Suggested by Maxim Dikun (#34).

	* HsOpenSSL.cabal (Version): Bump version to 0.11.1

2014-07-13  PHO  <pho@cielonegro.org>

	* OpenSSL/EVP/Base64.hsc (encodeBase64, decodeBase64): Mark as
	deprecated.

	* OpenSSL/EVP/Cipher.hsc (cipherInit): Removed. Use
	OpenSSL.EVP.Internal.cipherInitBS instead. This is a
	backward-incompatible change.

	* OpenSSL/EVP/Cipher.hsc (cipher): Mark as deprecated.
