@@ -37,7 +37,6 @@ Extra-Source-Files:
     examples/Server.hs
     examples/server.crt
     examples/server.pem
-    tests/Cipher.hs
     tests/DSA.hs
     tests/Makefile
 
@@ -122,6 +121,19 @@ Library
         cbits/HsOpenSSL.c
     Include-Dirs:
         cbits
+
+Test-Suite test-cipher
+    Type:    exitcode-stdio-1.0
+    Main-Is: Test/OpenSSL/Cipher.hs
+    Build-Depends:
+        HsOpenSSL,
+        HUnit                >= 1.0 && < 1.3,
+        base                 == 4.*,
+        bytestring           >= 0.9 && < 0.11,
+        test-framework       >= 0.8 && < 0.9,
+        test-framework-hunit >= 0.3 && < 0.4
+    GHC-Options:
+        -Wall
 
 Test-Suite test-evp-base64
     Type:    exitcode-stdio-1.0
