@@ -1,5 +1,8 @@
 2014-12-31  PHO  <pho@cielonegro.org>
 
+	* tests/Cipher.hs: Rename to Test/OpenSSL/Cipher.hs and make it a
+	cabal test-case.
+
 	* tests/Base64.hs: Rename to Test/OpenSSL/EVP/Base64.hs and make
 	it a cabal test-case.
 
